added terraform implementation

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ coverage
 .vscode
 # node-waf configuration
 .lock-wscript
-
+# terraform
+variables.tf
+variable.tf
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 dist/
